# my-portfolio

./:  tailwind.config.js  .env.example  .eslintrc.js  .gitignore  LICENSE  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  readme.md  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml  playwright.yml
public/data/: story-player-stories.json
public/libs/particles-js/: custom-config.json
public/libs/typewriter-js/: typewriter-js.min.js
scripts/: Cargo.toml
scripts/.cargo/: config.example
scripts/src/: aws_s3.rs  directory_files.rs  main.rs  upload_directory.rs
src/components/astro/: typewrite.astro
src/components/astro/dock/: index.astro
src/components/astro/download-button/: index.astro
src/components/astro/i-am/: index.astro
src/components/astro/network-loader/: index.astro
src/components/astro/no-responsive-dialog/: index.astro
src/components/astro/particles-bg/: index.astro
src/components/astro/portfolio/: index.astro
src/components/astro/typewriter/: index.astro
src/components/svelte/loader/: index.svelte
src/components/svelte/story-player/: index.d.ts  index.svelte  store.ts
src/config/aws/s3/: index.ts
src/data/: dock-items.json  story-player-stories.json  story-player-videos.json
src/layout/: base.astro
src/libs/: typewriter.ts
src/pages/: index.astro
src/scripts/: upload-to-s3.ts
src/shared/: index.ts
src/styles/: global.css
src/types/: global.d.ts
tests/components/svelte/story-player/: index.test.ts
tests/e2e/: no-responisve-view.test.ts  portfolio-view.test.ts
(+7 files in other folders)
